# zed

./: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs
crates/language/src/: language_registry.rs
crates/language_detector/: Cargo.toml
crates/language_detector/benches/: detection_benchmark.rs
crates/language_detector/src/: language_detector.rs
crates/language_detector/tests/: detection_accuracy.rs  magika_accuracy.rs
